# ESP32-WiFi-Manager

./: CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
main/: CMakeLists.txt  main.c  result.md
spiffs_image/html/: index.html
spiffs_image/wifi/: wifi1.txt  wifi2.txt
